# web

./: .codeclimate.yml  .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .travis.yml  Dockerfile  Dockerfile.static  LICENSE  README.md  a.env  after_pull.sh  build_requirements.sh  database.sqlite3.new_user  docker-compose.prod.example.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  docker-dev-entrypoint.sh  example.env  fabfile.py  manage.py  production.example.env  pyproject.toml  requirements.devel.in  requirements.devel.txt  requirements.in  requirements.txt  requirements2.in  requirements3.devel.txt  requirements3.txt  run_login.sh  setup.cfg  static-nginx.conf  tox.ini
.circleci/: config.yml
css/: gulpfile.js  package-lock.json  package.json
css/src/: base.less  fks.less  kms.less  ksp.less  susi.less  trojsten-print.less  trojsten.less  variables.less
data/: fks_kola.csv  kms.csv
design/: Gruntfile.js
design/bootstrap/: Gruntfile.js  package-lock.json  package.json
design/js/: offcanvas.js
design/less/: base.less  bootstrap.less  grid.less  labels.less  navbar-nonresponsive.less  navbar.less  tables.less  type.less  variables.less
docker/common/: install_build_deps.sh  install_runtime_deps.sh
docker/dev/: Dockerfile
docker/prod/: Dockerfile  entrypoint.sh  web.env
docker/test/: Dockerfile
fixtures/: sites.json
regal/: README.md  admin.py  model_utils.py  models.py  properties.py  tests.py  urls.py  views.py
regal/contests/: admin.py  models.py  tests.py  views.py
regal/people/: admin.py  models.py  tests.py  urls.py
regal/problems/: admin.py  models.py  tests.py
regal/tasks/: admin.py  models.py
trojsten/: __init__.py  admin.py  celery.py  context_processors.py  markdown_editors.py  models.py  search_indexes.py  tests.py  urls.py  version.py  views.py  wsgi.py
trojsten/archive/: helpers.py  tests.py  views.py
trojsten/contact_form/: forms.py  tests.py  views.py
trojsten/contests/: admin.py  apps.py  constants.py  forms.py  helpers.py  models.py  rules.py  tests.py  urls.py  views.py
trojsten/dbsanitizer/: model_sanitizers.py  tests.py
(+1242 files in other folders)
