[tool.poetry]
name = "trojstenweb"
version = "2.11.0"
description = "Trojsten web"
authors = ["Trojsten Tech Team <tech.group@trojsten.sk>"]
license = "MIT"
packages = [
  { include = "trojsten"}
]
repository = "https://github.com/trojsten/web"
readme = "README.md"

[tool.poetry.dependencies]
"backports.csv" = "^1.0"
bs4 = "^0.0.1"
certifi = "=2021.5.30"
czech_sort = "^0.4.0"
django = "^2.2"
django-bootstrap-form = "^3.4"
django-bulk-update = "^2.2"
django-classy-tags = "^0.9.0"
django-contact-form = "^1.7"
django-contrib-comments = "^1.9"
django-cors-headers = "^3.1"
django-countries = "^5.5"
django-crispy-forms = "^1.8"
django-dotenv = "^1.4"
django-easy-select2 = "^1.5"
django-favicon = "^0.1.3"
django-fluent-comments = "^2.1"
django-haystack = "^2.8"
django-import-export = "^2"
django-mathfilters = "^0.4.0"
django-oauth-toolkit = "<1.2.0"
django-recaptcha2 = "^1.4"
django-sekizai = "^1.0"
django-sendfile = "^0.3.11"
django-sortedm2m = "^2.0"
django-threadedcomments = "^1.2"
django-tips = "^0.7.1"
django-trojsten-news = "^0.2.2"
djangorestframework = "^3.10"
ecdsa = "^0.14.1"
elasticsearch = "^7.0"
faker = "^2.0"
first = "^2.0"
ksp-login = "^0.6.1"
openpyxl = "<3" # Remove when we upgrade to py3.6+ on beta.
psycopg2 = "^2.8"
python = "^3.5"
pytz = "^2019.3"
pyyaml = "^5.1"
requests = "<=2.15" # to maintain compatibility with old openssl on prod.
social-auth-app-django = "^3.1"
trojsten-judge-client = "^1.0"
Unidecode = "^1.1"
wiki = "^0.5"
pymdown-extensions = "^5"
python-magic = "0.4.18" # 0.4.19 and 0.4.20 are broken, and poetry does not support yanked releases yet.

[tool.poetry.dev-dependencies]
bumpversion = "^0.5.3"
coverage = "^4.5"
django-debug-toolbar = "^2.0"
flake8 = "^3.7"
isort = "^4.3"
pre-commit = "^1.20"
sqlparse = "^0.3.0"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_mcu
  | node_modules
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
